--- a/admin.html
+++ b/admin.html
@@ -2,7 +2,7 @@
 		<html xmlns="http://www.w3.org/1999/xhtml" class="ie8" lang="id-ID">
 	<![endif]--><!--[if !(IE 8) ]><!--><html xmlns="http://www.w3.org/1999/xhtml" lang="id-ID"><!--<![endif]--><head>
 	<meta http-equiv="Content-Type" content="">
-	<title>Log Masuk ‹ SMA SULTHAN BARUNA CIKADU — WordPress</title>
+	<title>Log Masuk ‹ SMA MAHATMA GADING — WordPress</title>
 	<link rel="dns-prefetch" href="//www.google.com">
 <link rel="dns-prefetch" href="//s.w.org">
 <script type="text/javascript" src="js/jquery.js"></script>
@@ -36,7 +36,7 @@ var wpdevart = {"ajaxUrl":"https:\/\/smasuba.gosch.id\/wp-admin\/admin-ajax.php"
 	</head>
 	<body class="login login-action-login wp-core-ui  locale-id-id">
 		<div id="login">
-		<h1><a href="/" title="GoSCH.id" tabindex="-1">SMA SULTHAN BARUNA CIKADU</a></h1>
+		<h1><a href="/" title="GoSCH.id" tabindex="-1">SMA MAHATMA GADING</a></h1>
 	
 <form name="loginform" id="loginform" action="/admin/" method="post">
 	<p>
@@ -73,7 +73,7 @@ wp_attempt_focus();
 if(typeof wpOnload=='function')wpOnload();
 </script>
 
-	<p id="backtoblog"><a href="/">← Kembali ke SMA SULTHAN BARUNA CIKADU</a></p>
+	<p id="backtoblog"><a href="/">← Kembali ke SMA MAHATMA GADING</a></p>
 		
 	</div>
 
